# NYCU-NSD

./: .gitignore
hw2/YI-CHENG-SHIH645/q1/: CMakeLists.txt
hw2/YI-CHENG-SHIH645/q2/: CMakeLists.txt
hw3/YI-CHENG-SHIH645/: performance.txt
hw4/YI-CHENG-SHIH645/: CMakeLists.txt
recommender/: .gitignore  CF.py  CMakeLists.txt  README.md  demo.ipynb  pyproject.toml  setup.py
recommender/data/: train_test_split.py
recommender/data/Book_reviews/Book_reviews/: BX-Book-Ratings-test.csv
recommender/exps/: test-rmse_user-based_k-1_simi0.txt
recommender/recommender.egg-info/: PKG-INFO  SOURCES.txt
recommender/src/: CF.cpp  CF.h  CMakeLists.txt  InputReader.h  KNN.cpp  KNN.h  StopWatch.h  main.cpp  py_mod.cpp
recommender/tests/: CMakeLists.txt  test.cpp
recommender/tests/tests/: test.cpp
